# BowedVst

./: .gitignore  .gitmodules  CMakeLists.txt
src/: BowedStringVoice.cpp  BowedStringVoice.h  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StringEnsembleEngine.cpp  StringEnsembleEngine.h
